update write ups for the service

--- a/about.html
+++ b/about.html
@@ -345,6 +345,57 @@
       </div>
     </div>
     <!-- End-About-feature-area -->
+
+    <!-- Start About Area -->
+    <div class="area-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 col-xs-12">
+            <div class="section-headline text-center">
+              <h3>More Expectation from our experts</h3>
+              <p>SKILLED. RELIABLE. PROFESSIONAL.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="text-center">
+              <div class="video-content">
+                <img
+                  src="img/team-expectation.jpg"
+                  alt="Team Expectation"
+                  height="200"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-12">
+            <div class="video-text">
+              <h4>That's not just a tagline—it's our promise.</h4>
+              <p>
+                When you invite us into your space, you deserve complete
+                confidence. That's why every member of our team is held to the
+                highest standard: Skilled, Reliable, and Professional. Get the
+                superior clean you've always expected.
+              </p>
+              <ul class="marker-list">
+                <li>Experienced Technicians.</li>
+                <li>Qualified Decorators.</li>
+                <li>Trained and Vetted.</li>
+                <li>Fully Insured.</li>
+                <li>Customer Focused.</li>
+                <li>Flexible and Efficient.</li>
+                <li>Quality and Assurance.</li>
+                <li>Safety and Trust.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- end Row -->
+      </div>
+    </div>
+    <!-- End About Area -->
+
     <!-- Team area start -->
     <div class="team-area area-padding">
       <div class="container">
@@ -443,6 +494,7 @@
       </div>
     </div>
     <!-- team area end -->
+
     <!-- Start testimonials Area -->
     <div class="testimonial-area area-padding">
       <div class="test-overly"></div>
