--- a/service.html
+++ b/service.html
@@ -309,10 +309,10 @@
               </div>
               <div class="main-services">
                 <div class="service-content">
-                  <h4>Maid service</h4>
+                  <h4>Regular / Weekly cleaning</h4>
                   <p>
                     Experience the power of clean with Bolfis Cleaning and
-                    Decorating LTD! Trust our professional maids for sparkling
+                    Decorating LTD! Trust our professional for sparkling
                     homes and peaceful living: One-time deep cleaning,
                     move-in/move-out cleaning.
                   </p>
@@ -368,8 +368,7 @@
             <div class="section-headline text-center">
               <h3>Our Services</h3>
               <p>
-                The world's Latest at clean cleaning service company we can
-                clean your residential space including homes.
+                Our experts provide the meticulous, dependable cleaning service you need for a truly pristine space.
               </p>
             </div>
           </div>
@@ -515,92 +514,91 @@
 
 
     <!-- start pricing area -->
-    <div class="pricing-area fix area-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="section-headline text-center">
-              <h3>Our pricing</h3>
-              <p>
-                The world's Latest at clean cleaning service company we can
-                clean your residential space including homes.
-              </p>
-            </div>
+  <div class="pricing-area fix area-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="section-headline text-center">
+            <h3>What we offer:</h3>
+            <p>
+              At Bolfis, we provide comprehensive and reliable cleaning services tailored to meet your needs. From routine home tidying to deep commercial cleans, our skilled team ensures a spotless and refreshing environment. We handle the dirt, so you can enjoy the shine.
+            </p>
           </div>
         </div>
-        <div class="row">
-          <div class="pricing-content">
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <div class="table-list">
-                <div class="top-price-inner">
-                  <h4>Standard</h4>
-                  <div class="rates">
-                    <span class="prices"><span class="dolar">£</span>15</span
-                    ><span class="users">Per Hour</span>
-                  </div>
-                </div>
-                <ol>
-                  <li class="check">Expert cleaner</li>
-                  <li class="check">Secure services</li>
-                  <li class="check">Organic cleaning</li>
-                  <li class="check">Review system</li>
-                  <li class="check">Maintenance cleaning</li>
-                  <li class="check">--------</li>
-                </ol>
-                <div class="price-btn">
-                  <a href="order-from.html">Book now</a>
-                </div>
+      </div>
+      <div class="row">
+        <div class="pricing-content">
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="table-list">
+              <div class="top-price-inner">
+                <!-- <h4>Standard</h4> -->
+                <!-- <div class="rates">
+                  <span class="prices"><span class="dolar">£</span>15</span><span class="users">Per Hour</span>
+                </div> -->
+              </div>
+              <ol>
+                <li class="check">Expert cleaner</li>
+                <li class="check">Regular and Weekly house cleaning</li>
+                <li class="check">End-of-tenancy / Move-out cleaning</li>
+                <li class="check">Interior decorating and small repairs</li>
+                <li class="check">Deep and Spring cleaning</li>
+                <li class="check">--------</li>
+              </ol>
+              <div class="price-btn">
+                <a href="order-from.html">Book now</a>
               </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <div class="table-list">
-                <!-- <span class="slugan">20% <br/>off</span> -->
-                <div class="top-price-inner">
-                  <h4>Premium</h4>
-                  <div class="rates">
-                    <span class="prices"><span class="dolar">£</span>80</span
-                    ><span class="users">Per day</span>
-                  </div>
-                </div>
-                <ol>
-                  <li class="check">Expert cleaner</li>
-                  <li class="check">Secure services</li>
-                  <li class="check">Organic cleaning</li>
-                  <li class="check">Review system</li>
-                  <li class="check">Maintenance cleaning</li>
-                  <li class="check">--------</li>
-                </ol>
-                <div class="price-btn">
-                  <a href="order-from.html">Book now</a>
-                </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="table-list">
+              <!-- <span class="slugan">20% <br />off</span> -->
+              <div class="top-price-inner">
+                <!-- <h4>Premium</h4> -->
+                <!-- <div class="rates">
+                  <span class="prices"><span class="dolar">£</span>80</span><span class="users">Per day</span>
+                </div> -->
+              </div>
+              <ol>
+                <li class="check">Expert cleaner</li>
+                <li class="check">Regular and Weekly house cleaning</li>
+                <li class="check">End-of-tenancy / Move-out cleaning</li>
+                <li class="check">Interior decorating and small repairs</li>
+                <li class="check">Garden cleaning and restoration</li>
+                <li class="check">Deep and Spring cleaning</li>
+                <li class="check">--------</li>
+              </ol>
+              <div class="price-btn">
+                <a href="order-from.html">Book now</a>
               </div>
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-12">
-              <div class="table-list">
-                <div class="top-price-inner">
-                  <h4>Ultimate</h4>
-                  <div class="rates">
-                    <span class="prices"><span class="dolar">£</span>600</span
-                    ><span class="users">Per Month</span>
-                  </div>
-                </div>
-                <ol>
-                  <li class="check">Expert cleaner</li>
-                  <li class="check">Secure services</li>
-                  <li class="check">Organic cleaning</li>
-                  <li class="check">Review system</li>
-                  <li class="check">Maintenance cleaning</li>
-                  <li class="check">Free support</li>
-                </ol>
-                <div class="price-btn">
-                  <a href="order-from.html">Book now</a>
-                </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="table-list">
+              <div class="top-price-inner">
+                <!-- <h4>Ultimate</h4> -->
+                <!-- <div class="rates">
+                  <span class="prices"><span class="dolar">£</span>600</span><span class="users">Per Month</span>
+                </div> -->
+              </div>
+              <ol>
+                <li class="check">Expert cleaner</li>
+                <li class="check">Regular and Weekly house cleaning</li>
+                <li class="check">End-of-tenancy / Move-out cleaning</li>
+                <li class="check">Interior decorating and small repairs</li>
+                <li class="check">Garden cleaning and restoration</li>
+                <li class="check">Deep and Spring cleaning</li>
+                <li class="check">Maintenance cleaning</li>
+                <li class="check">Free support</li>
+              </ol>
+              <div class="price-btn">
+                <a href="order-from.html">Book now</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
     <!-- End pricing table area -->
     <!-- Start Footer bottom Area -->
