added a whatsapp floating icon to the webpage for easy access

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                           <input type="text" id="name" placeholder="Full Name" required />
                           <input type="email" id="email" placeholder="Email Address" required />
                           <input type="tel" id="phone" placeholder="Phone Number" required />
-                          <input type="number" id="post-code" placeholder="Postcode" required />
+                          <input type="text" id="post-code" placeholder="Postcode" required />
                           <select required id="service">
                             <option value="">Select Service</option>
                             <option value="Office Cleaning">Office Cleaning</option>
@@ -287,7 +287,7 @@
                           <input type="text" id="name" placeholder="Full Name" required />
                           <input type="email" id="email" placeholder="Email Address" required />
                           <input type="tel" id="phone" placeholder="Phone Number" required />
-                          <input type="number" id="num" placeholder="Postcode" required />
+                          <input type="text" id="post-code" placeholder="Postcode" required />
                           <select required id="service">
                             <option value="">Select Service</option>
                             <option value="Office Cleaning">Office Cleaning</option>
@@ -408,7 +408,7 @@
                           <input type="text" id="name" placeholder="Full Name" required />
                           <input type="email" id="email" placeholder="Email Address" required />
                           <input type="tel" id="phone" placeholder="Phone Number" required />
-                          <input type="number" id="num" placeholder="Postcode" required />
+                          <input type="text" id="post-code" placeholder="Postcode" required />
                           <select required id="service">
                             <option value="">Select Service</option>
                             <option value="Office Cleaning">Office Cleaning</option>
@@ -1356,6 +1356,12 @@
    <script src="js/service.js"></script>
   <script src="js/main.js"></script>
 
+  <div id="whatsapp-container">
+    <a href="https://wa.me/+447438168728?text=I%20am%20interested%20in%20your%20cleaning%20services" target="_blank" id="whatsapp-float">
+      <span class="chat-text">Need help? Chat with us!</span>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="Chat on WhatsApp">
+    </a>
+</div>
   <drutek-cookie-banner banner-title="Cookies"
     banner-text="We use cookies to help personalise content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Homeclean."
     privacy-policy-link="/uk/privacy_statement.html"
