google tag added to all pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Home | Bolfis Cleaning and Decorating</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- gtag code -->
+  <meta name="google-site-verification" content="kU6FD2y14i4xBEcbHvTK8JAeILftcvIMg7oh5OlKiIA"   />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0CKD9HRMT"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-E0CKD9HRMT'); </script>
+
 
   <!-- favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="img/logo/logo-edit-removebg-preview.png" />
@@ -246,7 +252,7 @@
       </div>
 
 
-            <!-- slider 2 -->
+      <!-- slider 2 -->
       <div class="intro-content">
         <div class="slider-images">
           <img src="img/slider/h2.jpg" alt="" />
@@ -278,7 +284,7 @@
                     </div>
                   </div>
 
-                                    <!-- form-contact md screen up-->
+                  <!-- form-contact md screen up-->
                   <div class="col-md-5 contact-sec-form">
                     <div class="modal-content" id="modal-content">
                       <h5 style="text-align: center;">NEED HIGH LEVEL CLEANING SERVICE?<br> GET IN TOUCH FOR A FREE
@@ -399,37 +405,37 @@
   </div>
   <!-- End Appointment Area -->
 
-                    <!-- form-contact small screen up-->
-                  <div class="col-md-5 contact-sec-form-mobile">
-                    <div class="modal-content">
-                      <h5 style="text-align: center;">NEED HIGH LEVEL CLEANING SERVICE?<br> GET IN TOUCH FOR A FREE
-                        QUOTE</h2>
-                        <form id="contact-sec-form" onsubmit="contact_Sec_Form(event)">
-                          <input type="text" id="name" placeholder="Full Name" required />
-                          <input type="email" id="email" placeholder="Email Address" required />
-                          <input type="tel" id="phone" placeholder="Phone Number" required />
-                          <input type="text" id="post-code" placeholder="Postcode" required />
-                          <select required id="service">
-                            <option value="">Select Service</option>
-                            <option value="Office Cleaning">Office Cleaning</option>
-                            <option value="Apartment Cleaning">Apartment cleaning</option>
-                            <option value="Carpet and Upholstery Cleaning">Carpet and Upholstery cleaning</option>
-                            <option value="House Cleaning">House cleaning</option>
-                            <option value="Residential Cleaning">Residential cleaning</option>
-                            <option value="After Renovation">After renovation</option>
-                            <option value="Commercial Cleaning">Commercial cleaning</option>
-                            <option value="Deep and Spring Cleaning">Deep and spring cleaning</option>
-                            <option value="Interior Decorating and Repairs">Interior Decorating and repairs</option>
-                            <option value="Garden Cleaning and restoration ">Garden Cleaning and restoration</option>
-                            <option>Other</option>
-                          </select>
-                          <p>Please tell us what's on your mind. Have a question for us?</p>
-                          <textarea name="message" id="txt-message" placeholder="Your Message?" rows="5"></textarea>
-                          <button type="submit" class="submit-btn">Get a quote</button>
-                        </form>
-                    </div>
+  <!-- form-contact small screen up-->
+  <div class="col-md-5 contact-sec-form-mobile">
+    <div class="modal-content">
+      <h5 style="text-align: center;">NEED HIGH LEVEL CLEANING SERVICE?<br> GET IN TOUCH FOR A FREE
+        QUOTE</h2>
+        <form id="contact-sec-form" onsubmit="contact_Sec_Form(event)">
+          <input type="text" id="name" placeholder="Full Name" required />
+          <input type="email" id="email" placeholder="Email Address" required />
+          <input type="tel" id="phone" placeholder="Phone Number" required />
+          <input type="text" id="post-code" placeholder="Postcode" required />
+          <select required id="service">
+            <option value="">Select Service</option>
+            <option value="Office Cleaning">Office Cleaning</option>
+            <option value="Apartment Cleaning">Apartment cleaning</option>
+            <option value="Carpet and Upholstery Cleaning">Carpet and Upholstery cleaning</option>
+            <option value="House Cleaning">House cleaning</option>
+            <option value="Residential Cleaning">Residential cleaning</option>
+            <option value="After Renovation">After renovation</option>
+            <option value="Commercial Cleaning">Commercial cleaning</option>
+            <option value="Deep and Spring Cleaning">Deep and spring cleaning</option>
+            <option value="Interior Decorating and Repairs">Interior Decorating and repairs</option>
+            <option value="Garden Cleaning and restoration ">Garden Cleaning and restoration</option>
+            <option>Other</option>
+          </select>
+          <p>Please tell us what's on your mind. Have a question for us?</p>
+          <textarea name="message" id="txt-message" placeholder="Your Message?" rows="5"></textarea>
+          <button type="submit" class="submit-btn">Get a quote</button>
+        </form>
+    </div>
 
-                  </div>
+  </div>
 
 
   <!-- service area start -->
@@ -725,7 +731,9 @@
           <div class="section-headline text-center">
             <h3>What we offer:</h3>
             <p>
-              At Bolfis, we provide comprehensive and reliable cleaning services tailored to meet your needs. From routine home tidying to deep commercial cleans, our skilled team ensures a spotless and refreshing environment. We handle the dirt, so you can enjoy the shine.
+              At Bolfis, we provide comprehensive and reliable cleaning services tailored to meet your needs. From
+              routine home tidying to deep commercial cleans, our skilled team ensures a spotless and refreshing
+              environment. We handle the dirt, so you can enjoy the shine.
             </p>
           </div>
         </div>
@@ -1320,7 +1328,7 @@
   </footer>
 
   <!-- all js here -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- jquery latest version -->
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
@@ -1346,22 +1354,20 @@
   <script src="js/form-validator.min.js"></script>
   <!-- plugins js -->
   <script src="js/plugins.js"></script>
-<!-- email js  -->
-  <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
-    ></script>
+  <!-- email js  -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
   <!-- main js -->
-   <script src="js/service.js"></script>
+  <script src="js/service.js"></script>
   <script src="js/main.js"></script>
 
   <div id="whatsapp-container">
-    <a href="https://wa.me/+447438168728?text=I%20am%20interested%20in%20your%20cleaning%20services" target="_blank" id="whatsapp-float">
+    <a href="https://wa.me/+447438168728?text=I%20am%20interested%20in%20your%20cleaning%20services" target="_blank"
+      id="whatsapp-float">
       <span class="chat-text">Need help? Chat with us!</span>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="Chat on WhatsApp">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="Chat on WhatsApp">
     </a>
-</div>
+  </div>
   <drutek-cookie-banner banner-title="Cookies"
     banner-text="We use cookies to help personalise content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Homeclean."
     privacy-policy-link="/uk/privacy_statement.html"
