--- a/service.html
+++ b/service.html
@@ -7,6 +7,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- gtag code -->
+  <meta name="google-site-verification" content="kU6FD2y14i4xBEcbHvTK8JAeILftcvIMg7oh5OlKiIA" />
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-E0CKD9HRMT"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-E0CKD9HRMT'); </script>
+
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="img/logo/logo-edit-removebg-preview.png" />
 
