added ratings to the page

--- a/about.html
+++ b/about.html
@@ -684,6 +684,21 @@
         <!-- end Row -->
       </div>
     </div>
+
+    <div class="about-area area-padding">
+      <div class="container">
+        <div class="row">
+          <div data-bid="163690" data-url="https://app.revu.cloud">
+            <script
+              src="https://widget.reviewability.com/js/widgetAdv.min.js"
+              async
+            ></script>
+          </div>
+          <script class="json-ld-content" type="application/ld+json"></script>
+        </div>
+      </div>
+    </div>
+
     <!-- End About Area -->
     <!-- Start Footer bottom Area -->
     <footer class="footer-1">
