--- a/index.html
+++ b/index.html
@@ -545,6 +545,16 @@
       </div>
     </div>
   </div>
+
+<div class="about-area area-padding">
+    <div class="container">
+      <div class="row">
+  <div data-bid="163690" data-url="https://app.revu.cloud" data-aid="26838"><script src="https://widget.reviewability.com/js/widgetAdv.min.js" async></script></div><script class="json-ld-content" type="application/ld+json"></script>
+      </div>
+    </div>
+</div>
+  
+
   <!-- service-area end -->
   <!-- about-area start -->
   <div class="about-area area-padding">
@@ -1373,6 +1383,10 @@
     privacy-policy-link="/uk/privacy_statement.html"
     privacy-policy-link-text="Please see our privacy statement for more details"></drutek-cookie-banner>
   <script src="https://unpkg.com/drutek-web-components@0.6.0/dist/drutek-web-components.js"></script>
+
+  <div id="popup-rating-widget"><script id="popup-rating-widget-script" src="https://widget.reviewability.com/js/popupWidget.min.js" data-gfspw="https://app.revu.cloud/popup-pixel/get/bb86971351a87ec0aae35e010682f24b956e17dc" async></script></div>
+
+
 </body>
 
 </html>
